fix overflow popup

--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,8 @@ body{
 .block-information .block{
    position: fixed;
     top: 50%;
-   left: 50%;   
+   left: 50%;  
+   height: 90vh;
     transform: translate(-50%,-50%);
    z-index: 130;
     display: flex;
@@ -335,11 +336,14 @@ body{
     width: 70%;
     display: flex;
     flex-direction: column;
+ 
 
 }
 .other-information .left p{
    line-height: 30px;
-   
+   display: block;
+  height: 150px; 
+     overflow: auto;
 }
 .other-information .right{
     width: 40%;
